# tiktok-mcp-ads-report

./: .gitignore  README.md  arguments.report.example.json  environment.yml  fetch_ads.py  job.example.json  pyproject.toml
scripts/: run_fetch.ps1  setup-conda.ps1
src/tiktok_mcp_client/: __init__.py  cli.py  menu.py  report.py
tests/: test_cli.py  test_report.py
