[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "official-tiktok-mcp-client"
version = "0.1.0"
description = "Standalone automation client for TikTok for Business official MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "mcp",
    "pydantic",
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
tiktok-mcp-client = "tiktok_mcp_client.cli:main"
tiktok-mcp-fetch = "tiktok_mcp_client.menu:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tiktok_mcp_client"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
